# HabitTracker

./: README.md  habit_tracker.db  pyproject.toml
src/: habit_tracker.db  main.py  main.py~
src/analytics/: analytics.py
src/database/: db_handler.py
src/models/: completion.py~  habit.py~  user.py~
src/tests/: test_analytics.py~  test_completion.py  test_completion.py~  test_db_handler.py  test_habit.py~  test_user.py~
src/tests/__pycache__/: test_analytics.cpython-313-pytest-8.3.5.pyc.14096  test_analytics.cpython-313-pytest-8.3.5.pyc.18648  test_habit.cpython-313-pytest-8.3.5.pyc.23772  test_habit.cpython-313-pytest-8.3.5.pyc.7648
