[project]
name = "habittracker"
version = "0.1.0"
description = ""
authors = [
    {name = "Katsiaryna Petrushenia",email = "katsiaryna.petrushenia@iu-study.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "click (>=8.2.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "--rootdir=src"